--- a/style.css
+++ b/style.css
@@ -7,13 +7,12 @@ body {
 .name{
 	position:absolute;
 	padding:20px -20px;
-	z-index:9002;
+	z-index:90002;
 	width:70%;
 	height:auto;
 	font-size: 70pt;
-	color:white;
 	border-style: solid;
-	border-color: white;
+	border-color: black;
 	border-width:5px;
 	border-radius: 5px;
 	left: 50%;
@@ -101,6 +100,7 @@ body {
 .navtop {
 	text-align: center;
 	position:fixed;
+	margin-top: -355px;
 	width:100%;
 	height:51px;
 	background-color: rgba(0,0,0,0.5);
