--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+	max-width: 100%;
+}
 body {
 	margin:0;
 	padding: 0px;
@@ -38,6 +41,7 @@ body {
 	width:100%;
 	height:350px;
 	text-align: center;
+	overflow:hidden;
 	background-color: white;
 	z-index: 9001;
 	padding-bottom: -10px;
