--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
 	max-width: 100%;
 }
 body {
+	overflow-x: hidden;
 	margin:0;
 	padding: 0px;
 	font-family: 'Open Sans' , sans-serif;
@@ -32,7 +33,7 @@ body {
 @media screen and (max-width:6in){
 	.name{
 		width:95%;
-		font-size: 42pt;
+		font-size: 40pt;
 		padding:0px;
 	}
 }
@@ -140,9 +141,14 @@ li a{
 	color:#FFF;
 	text-decoration: none;
 }
-@media screen and (max-width:422px){
+@media screen and (max-width:422px) and (min-width:321px){
 	li a{
 		padding:15px 8px;
+	}
+}
+@media screen and (max-width:320px){
+	li a{
+		padding:15px 5px;
 	}
 }
 .active {
@@ -305,10 +311,9 @@ li a:hover:not(.active){
 	display: flex;
 	width:48rem;
 	margin:0 auto;
-	overflow:hidden;
 }
 .box p{
-	display: block;
+	overflow:hidden;
 	position: absolute;
 	padding: 24px;
 	width:48rem;
@@ -337,19 +342,28 @@ li a:hover:not(.active){
 	.core img{padding-top: 10px;}
 	.feedback{padding-top: 20px;}
 	.box p{
-		width: 100%;
-		font-size: 20px;
-		line-height: 24px;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box; 
+		width: 108%;
+		padding-left: 2rem;
+		font-size: 18px;
+		overflow: hidden;
+		line-height: 20px;
 	}
 }
 @media screen and (max-width: 32em) and (min-width: 24.01em){
-		.box{
-			margin-top: -30px;
-			padding-top: -20px;
-	width:100%;
+	.box{
+		margin-top: -30px;
+		padding-top: -20px;
+		width:100%;
 	}
 	.box p{
-		width: 100%;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box; 
+		width: 105.8%;
+		padding-left: 3rem;
 		font-size: 21px;
 	}
 	.core img{
@@ -372,10 +386,12 @@ li a:hover:not(.active){
 		overflow: hidden;
 	}
 	.box{
-	width:100%;
+		width:100%;
+		overflow: hidden;
 	}
 	.box p{
 		width: 100%;
+		overflow: hidden;
 		font-size: 21px;
 	}
 	.feedback{padding-top:120px;}
